Feature: Configuration of TailwindCSS

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,9 @@
 <header class="bg-blue-900 shadow-lg text-white shadow-gray-900 flex justify-between py-4">
   <div class="flex-shrink-0 px-4 flex items-center">
-    <a routerLink="/">
       <img
-        src="../../../../assets/images/powersurge.png"
-        alt="Logo"
-        class="h-10 ml-4 border border-transparent hover:border-white"
+        src="../../../assets/images/powersurge.png"
+        class="rounded-lg h-100 w-40"
       />
-    </a>
   </div>
   <div class="flex justify-end mr-3" *ngIf="router.url !== '/login'">
     <div class="col-6 flex justify-end">
