Feature: initial setup of the header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
-<header class="bg-blue-900 shadow-lg text-white shadow-gray-900 flex justify-between py-4">
+<header class="bg-blue-900 shadow-lg text-white shadow-gray-900 flex justify-between py-4 h-100">
   <div class="flex-shrink-0 px-4 flex items-center">
       <img
         src="../../../assets/images/powersurge.png"
-        class="rounded-lg h-100 w-40"
+        class="rounded-lg h-100 w-48"
       />
   </div>
   <div class="flex justify-end mr-3" *ngIf="router.url !== '/login'">
