--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,5 +8,6 @@
   <div class="flex justify-end mr-3" *ngIf="router.url !== '/login'">
     <div class="col-6 flex justify-end">
     </div>
+    <app-notification-bell></app-notification-bell>
   </div>
 </header>
