--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
 @import 'tailwindcss/utilities';
 @import "../node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css";
 @import "../node_modules/primeng/resources/primeng.css";
+
+.bigger-size {
+  font-size: 2rem !important;
+}
