--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="flex">
+  <app-desktop-menu></app-desktop-menu>
+
+  <div class="flex-grow">
+
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
