Feature: Design for the layout of the router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-header></app-header>
-<div class="flex">
+<div class="relative">
   <app-desktop-menu></app-desktop-menu>
-
-  <div class="flex-grow">
-
+  <div class="absolute top-0 left-0 ml-96">
     <router-outlet></router-outlet>
-
   </div>
 </div>
