--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="min-h-screen flex items-center justify-center bg-blue-900 py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full space-y-8">
+<div class="min-h-screen w-screen flex justify-center bg-gradient-to-br from-blue-500 via-blue-700 to-blue-900 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full bg-blue-800 bg-cover bg-no-repeat bg-center rounded-lg rounded-t-none h-full shadow-lg p-8">
     <div>
-      <img class="mx-auto h-12 w-auto" src="../../assets/images/powersurge.png" alt="Workflow">
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-yellow-300">
+      <img class="mx-auto h-40 w-auto" src="../../assets/images/powersurge.png" alt="Workflow">
+      <h2 class="mt-2 text-center text-3xl font-extrabold text-yellow-300">
         Sign in to your account
       </h2>
     </div>
