--- a/src/app/components/desktop-menu/desktop-menu.component.html
+++ b/src/app/components/desktop-menu/desktop-menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-screen bg-blue-900 border-t-2 border-r-2 border-yellow-300 justify-center w-1/5 absolute">
+<div class="flex flex-col-desktop-menu h-screen bg-blue-900 border-t-2 border-r-2 border-yellow-300 justify-center w-1/5 absolute">
   <div class="justify-start pt-4">
       <button
         (click)="router.navigate(['/'])"
