--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,37 @@
-<div class="p-8">
-<app-hero></app-hero>
+<div class="p-8 flex justify-center items-center min-h-screen overflow-auto w-full">
+
+<div class="py-6 px-4">
+  <h1 class="text-3xl font-bold mb-4">Dashboard</h1>
+
+  <!-- Workout Summary -->
+  <div class="p-6 bg-white rounded shadow mb-4">
+    <h2 class="text-2xl text-blue-600 font-bold mb-2">Last Workout</h2>
+    <!-- <app-workout-summary></app-workout-summary> -->
+    Workout summary
+  </div>
+
+  <!-- Progress Summary -->
+  <div class="p-6 bg-white rounded shadow mb-4">
+    <h2 class="text-2xl text-blue-600 font-bold mb-2">Highest lifts</h2>
+    <!-- <app-progress-summary></app-progress-summary> -->
+    Highest lift summary placeholder
+  </div>
+
+  <!-- Nutrition Summary -->
+  <div class="p-6 bg-white rounded shadow mb-4">
+    <h2 class="text-2xl text-blue-600 font-bold mb-2">Recent Nutrition</h2>
+    <!-- <app-nutrition-summary></app-nutrition-summary> -->
+  </div>
+
+  <div class="p-6 bg-white rounded shadow mb-4">
+    <h2 class="text-2xl text-blue-600 font-bold mb-2">Hydration overview</h2>
+    <!-- <app-nutrition-summary></app-nutrition-summary> -->
+  </div>
+
+  <div class="p-6 bg-white rounded shadow mb-4">
+    <h2 class="text-2xl text-blue-600 font-bold mb-2">Favorite exercise</h2>
+    <!-- <app-nutrition-summary></app-nutrition-summary> -->
+  </div>
+
+</div>
 </div>
