--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,5 +1,10 @@
-<div class="hero">
-  <h1>{{ headline }}</h1>
-  <p>{{ subheadline }}</p>
-  <p-button label="{{ ctaText }}" (onClick)="yourFunction()"></p-button>
-</div>
+  <div class="flex flex-col justify-center items-center w-full">
+    <h1 class="text-2xl text-indigo-400">{{ headline }}</h1>
+  </div>
+  <div class="flex flex-col justify-center items-end w-full">
+    <p>{{ subheadline }}</p>
+  </div>
+  <div class="flex flex-col justify-center items-center w-full mt-4">
+    <p-button label="{{ ctaText }}" (onClick)="yourFunction()"></p-button>
+  </div>
+
