--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,7 @@ p, span, div {
 }
 
 @media only screen and (min-width: 992px) {
-  .flex-col {
+  .flex-col-desktop-menu {
     flex-direction: row;
   }
 
@@ -66,5 +66,5 @@ p, span, div {
 }
 
 body {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
