--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col items-center min-h-screen w-full bg-gray-100 text-gray-900">
 
   <div class="ml-96">
-  <h1 class="text-4xl font-bold text-blue-900 mb-2 mt-4">{{ title }}</h1>
-  <p class="text-lg mb-6">{{ description }}</p>
+  <h1 class="text-4xl font-bold text-blue-900 mb-2 mt-4 text-center">{{ title }}</h1>
+  <p class="text-lg mb-6 text-center">{{ description }}</p>
 
 <app-hero></app-hero>
 
@@ -16,6 +16,7 @@
     </ul>
   </div>
 </div>
-<img src="../../assets/images/Fitness-Goals.jpg" alt="Description of image" class="w-2/5 max-w-full h-auto rounded ml-64">
-
+<div class=" flex flex-col items-center ml-52 mt-8">
+<img src="../../assets/images/Fitness-Goals.jpg" alt="Description of image" class="w-2/5 max-w-full h-auto rounded">
+</div>
 </div>
