Feature: Initial setup of the sign up page

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -7,7 +7,7 @@
     <p>{{ subheadline }}</p>
   </div>
   <div class="flex flex-col justify-center items-center w-full mt-4">
-    <p-button label="{{ ctaText }}" (onClick)="yourFunction()"></p-button>
+    <p-button label="{{ ctaText }}" (onClick)="navigateToSignUp()"></p-button>
   </div>
 </div>
 
